cambios en la ficha de partidos para el usaurio premium. Se muestra la ficha tecnica
