# backend/app/Http/Resources/TecnicoResource.php
@@ -6,7 +6,13 @@ use Illuminate\Http\Request;
 use Illuminate\Http\Resources\Json\JsonResource;
 use OpenApi\Attributes as OA;
 
-#[OA\Schema(schema: 'TecnicoResource', type: 'object')]
+#[OA\Schema(
+    schema: 'TecnicoResource',
+    properties: [
+        new OA\Property(property: 'te_desc', type: 'string'),
+        new OA\Property(property: 'cargo', type: 'string', nullable: true)
+    ]
+)]
 class TecnicoResource extends JsonResource
 {
     /**
@@ -16,6 +22,10 @@ class TecnicoResource extends JsonResource
      */
     public function toArray(Request $request): array
     {
-        return parent::toArray($request);
+        return [
+            'id_tecnicos' => $this->id_tecnicos,
+            'te_desc' => $this->tec_ape_nom,
+            'cargo' => $this->cargo,
+        ];
     }
 }
